# UART-monitor

./: README.md
config/: launcher.json  scoring.json
python_host/: __init__.py  alignment.py  capture.py  math3d.py  protocol.py  run_all.py  scoring.py  storage.py
python_host/tests/: test_protocol.py  test_scoring.py
resources/3D_model/: hand_palm.mtl
visualizer/: CMakeLists.txt
visualizer/src/: main.c  math3d.c  math3d.h  scene_assets.c  scene_assets.h  score_protocol.h  score_receiver.c  score_receiver.h  udp_protocol.h  udp_receiver.c  udp_receiver.h  ui_theme.c  ui_theme.h
